add design for web

--- a/src/copmonents/Skeleton/styles.module.css
+++ b/src/copmonents/Skeleton/styles.module.css
@@ -1,6 +1,14 @@
-.list {
+.columnList {
     display: flex;
     flex-direction: column;
+    gap: 12px;
+}
+
+.rowList {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    box-sizing: border-box;
+    width: 100%;
     gap: 12px;
 }
 
