--- a/src/copmonents/BannersList/styles.module.css
+++ b/src/copmonents/BannersList/styles.module.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
     width: 100%;
     gap: 12px;
-    max-height: 1200px;
-    overflow-y: auto;
+}
+
+@media (min-width: 768px) {
+    .banners {
+        max-height: 1200px;
+        overflow-y: auto;
+    }
 }
