--- a/src/copmonents/Pagination/styles.module.css
+++ b/src/copmonents/Pagination/styles.module.css
@@ -16,6 +16,18 @@
     cursor: default;
 }
 
+.pagination.dark .pageNumber,
+.pagination.dark .arrow {
+    background-color: #23272f;
+    color: #f6f7f9;
+}
+
+.pagination.light .pageNumber,
+.pagination.light .arrow {
+    background-color: white;
+    color: black;
+}
+
 .pageNumber:hover, .arrow:hover, .pageNumber:focus, .arrow:focus {
     font-weight: bold;
     transition: all .5s;
