--- a/src/copmonents/Search/styles.module.css
+++ b/src/copmonents/Search/styles.module.css
@@ -4,6 +4,14 @@
     background-color: white;
     gap: 12px;
   }
+
+  .light {
+    background-color: white;
+  }
+
+  .dark {
+    background-color: #24272f;
+  }
   
   .input {
     width: 100%;
